--- a/crostouchpad/crostouchpad.vcxproj.filters
+++ b/crostouchpad/crostouchpad.vcxproj.filters
@@ -51,4 +51,9 @@
       <Filter>Driver Files</Filter>
     </Inf>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="crostouchpad4.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
 </Project>
